2009-Aug-27 tomytsai    Add epics data collector level 1 (segment) node in pdsapp/dev/epicArch.cc
2009-Aug-27 tomytsai    Add epics data xtc archiver sample program in pdsapp/epics
2009-Aug-26     cpo     Fix AcqConfig.cc limits for offset/fullscale for acqiris.
2009-Aug-24	weaver	Added numeric key browser (configdb_list).  Add "Save data" option to mondisplay.
2009-Aug-22	weaver	Fixed most reconfigure problems in monshm.cc
2009-Aug-22     cpo     Fix datagram writing bug in Recorder.cc
2009-Aug-21     cpo     Add acqiris calibration code, and profile histograms to AcqConfig
2009-Aug-18	weaver  Tag V01-01-00.  Added run statistics to control_gui display by forwarding
            summarized L1Accepts (damage and size) to control level.  Created shared memory
            client version of monobs.  Changed interface to configdb to allow editing
            of XTC files.  Versioning is kept internally.
2009-Aug-15	weaver	Tag V01-00-03.  Changed monobs/CamDisplay and AcqDisplay to
            serve all channels found on Configure.  Rearranged production
            code into dev and devtest packages.
2009-Aug-12	weaver	Tag V01-00-02 for production release.
2009-Aug-11	jackp	Moved production code out of devtest into new package called dev.
2009-Aug-4	weaver	Fixed xtc file viewing in configdb_gui.  Added read-replace and
            read-append buttons for creating new xtcs (replacing configuration
            cycles or appending them).
2009-Jul-22	weaver	Tag V01-00-01. Synchronized with pds V01-00-01.
            Configdb fixes to file permissions, hexadecimal integer support,
            viewing.
            RunControl fixes to EPICS interface, configuration.
2009-Jul-21	jackp	Added monshmserver
2009-Jul-17	jackp	Changed DetInfo reference in segtest.cc to pnCCDframe and added devtest/xtctruncate
2009-Jul-14	weaver	Tag V01-00-00. Consistent with pds V01-00-00.  Added pdsapp/control
2009-Jul-10     cpo     Support for configuration of acqiris from database