@@ -3,6 +3,8 @@
 #include "pdsapp/control/NodeSelect.hh"
 #include "pds/management/PartitionControl.hh"
 #include "pds/collection/PingReply.hh"
+#include "pds/utility/StreamPorts.hh"
+#include "pdsdata/xtc/BldInfo.hh"
 
 using namespace Pds;
 
@@ -17,6 +19,7 @@ SelectDialog::SelectDialog(QWidget* parent,
   layout->addWidget(_segbox = new NodeGroup("Readout Nodes",this));
   layout->addWidget(_evtbox = new NodeGroup("Processing Nodes",this));
   layout->addWidget(_recbox = new NodeGroup("Recording Nodes",this));
+  layout->addWidget(_rptbox = new NodeGroup("Reporting Nodes",this));
 
   QPushButton* acceptb = new QPushButton("Ok",this);
   QPushButton* rejectb = new QPushButton("Cancel",this);
@@ -29,6 +32,12 @@ SelectDialog::SelectDialog(QWidget* parent,
   connect(acceptb, SIGNAL(clicked()), this, SLOT(select()));
   connect(rejectb, SIGNAL(clicked()), this, SLOT(reject()));
 
+  // add available BLD
+  for(int i=BldInfo::FEEGasDetEnergy; i<BldInfo::NumberOf; i++) {
+    Node n(Level::Reporter, 0);
+    n.fixup(StreamPorts::bld(i).address(),Ether());
+    _rptbox->addNode(NodeSelect(n,BldInfo::name(BldInfo(0,BldInfo::Type(i)))));
+  }
   _pcontrol.platform_rollcall(this);
 }
 
@@ -43,6 +52,7 @@ void        SelectDialog::available(const Node& hdr, const PingReply& msg) {
   case Level::Segment : _segbox->addNode(NodeSelect(hdr, msg)); break;
   case Level::Event   : _evtbox->addNode(NodeSelect(hdr)); break;
   case Level::Recorder: _recbox->addNode(NodeSelect(hdr)); break;
+  case Level::Reporter: _rptbox->addNode(NodeSelect(hdr)); break;
   default: break;
   }
 }
@@ -57,6 +67,7 @@ QWidget* SelectDialog::display() {
   layout->addWidget(_segbox->freeze()); 
   layout->addWidget(_evtbox->freeze()); 
   layout->addWidget(_recbox->freeze()); 
+  layout->addWidget(_rptbox->freeze()); 
   d->setLayout(layout);
   return d;
 }
@@ -67,5 +78,6 @@ void SelectDialog::select() {
   _selected << _segbox->selected();
   _selected << _evtbox->selected();
   _selected << _recbox->selected();
+  _selected << _rptbox->selected();
   accept();
 }
